# HQC-PARTITION

./: README.md  pyproject.toml
case_sheets/: README.md
case_sheets/examples/: pglib_uc_case_example.yaml  planqk_quantum_component_example.yaml  pypsa_uc_workflow_example.yaml
data_sources/: sources.yaml
outputs/case_features/: case_feature_note.md  pglib_uc_case_features.csv
outputs/demo/: partition_report.json  partition_report.md
scripts/: build_case_features.py  build_case_sheet.py  run_partition_demo.py
src/hqcep/: __init__.py  assessment.py  partition.py  pglib_uc_parser.py  report.py  schema.py
tests/: test_assessment.py  test_partition.py  test_pglib_parser.py  test_schema.py
